add main content

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 			<label for="star-reiting-2" class="star-reiting__label"></label>
 			<input  type="radio" value="1" class="star-reiting__item" name="star-reiting" id="star-reiting-1">
 			<label for="star-reiting-1" class="star-reiting__label"></label>
+			<input  type="radio" value="1" class="star-reiting__item" name="star-reiting" id="star-reiting-1">
+			<label for="star-reiting-1" class="star-reiting__label"></label>
+			<input  type="radio" value="1" class="star-reiting__item" name="star-reiting" id="star-reiting-1">
+			<label for="star-reiting-1" class="star-reiting__label"></label>
 		</div>
 	</div>
 </body>
